tests/src/frontend/typechecking/invalid/same_tparams_5.sk
fun no<T>(x: T): T {
  freeze(x)
}
